<?xml version="1.0"?>
<package format="3">
  <name>heartbeat_node</name>
  <version>0.0.1</version>
  <description>Official RosNext starter package for communication examples.</description>

  <maintainer email="ricardogochooa@gmail.com">Ricardo Gaspar</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>